k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: project-tools
  labels:
    app: backend
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        component: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/markusintility/projecttools-backend:5c73e75b7284071107527af41a43dc09214a57b0
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
