k8s/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: projecttools-api
  namespace: project-tools
spec:
  host: projecttools-api-project-tools.apps.ipc-dev-jey5h0.clusters.intilitycloud.com
  path: /mcp
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
